--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YG DESIGN - Layanan Desain Channel YouTube Profesional</title>
     <link rel="stylesheet" href="style.css">
-    </head>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-17RNN846F0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-17RNN846F0');
+    </script>
+</head>
 <body>
     <header class="navbar">
         <div class="container">
