--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>YG DESIGN - Layanan Desain Channel YouTube Profesional</title>
     <link rel="stylesheet" href="style.css">
 
-    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-17RNN846F0"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -15,18 +14,25 @@
 
       gtag('config', 'G-17RNN846F0');
     </script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header class="navbar">
         <div class="container">
             <div class="logo">
-                <img src="images/yg_design_large.png" alt="YG Design Logo"> </div>
-            <nav>
+                <img src="images/yg_design_large.png" alt="YG Design Logo">
+            </div>
+            <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <nav id="main-nav">
                 <ul>
                     <li><a href="#home">HOME</a></li>
                     <li><a href="#about">ABOUT</a></li>
                     <li><a href="#product">PRODUCT</a></li>
-                    <li><a href="#contact" class="contact-us-btn">CONTACT US</a></li>
+                    <li><a href="https://wa.me/6282150746678?text=Halo%20YG%20Design%2C%20saya%20tertarik%20dengan%20layanan%20Anda." class="contact-us-btn" target="_blank">CONTACT US</a></li>
                 </ul>
             </nav>
         </div>
@@ -35,7 +41,8 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>SELAMAT DATANG</h1>
-            <img src="images/yg_design_large.png" alt="YG Design Large Logo" class="hero-logo-large"> <p class="tagline">Layanan Desain Channel YouTube Profesional</p>
+            <img src="images/yg_design_large.png" alt="YG Design Large Logo" class="hero-logo-large">
+            <p class="tagline">Layanan Desain Channel YouTube Profesional</p>
             <p>Kami siap bantu kamu membangun tampilan channel yang menarik, berkualitas, dan profesional. Tersedia berbagai pilihan produk seperti bikin kikik, banner, yang mencuri perhatian, hingga profil yang menarik perhatian, serta thumbnail yang akan selalu selaras dengan seleramu kekinian dan presisi.</p>
         </div>
     </section>
@@ -48,7 +55,8 @@
                     <p>Kami adalah tim kreatif yang fokus membantu para content creator menghasilkan visual yang luar biasa. Dengan pengalaman mendalam dalam desain visual dan pemahaman tren desain, kami menciptakan profile ekstraksi yang bukan hanya menarik, tetapi juga fungsional. Fungsional — menarik perhatian dan meningkatkan engagement.</p>
                 </div>
                 <div class="info-image">
-                    <img src="images/youtube_illustration.png" alt="Illustrasi Bikin Channel YouTube"> </div>
+                    <img src="images/youtube_illustration.png" alt="Illustrasi Bikin Channel YouTube">
+                </div>
             </div>
         </div>
     </section>
@@ -58,14 +66,20 @@
             <h2>PRODUCT</h2>
             <div class="product-grid">
                 <div class="product-item">
-                    <img src="images/banner.jpg" alt="Banner Design"> <p>BANNER</p>
+                    <img src="images/banner.jpg" alt="Banner Design">
+                    <p>BANNER</p>
                 </div>
                 <div class="product-item">
-                    <img src="images/profile.jpg" alt="Profile Design"> <p>PROFILE</p>
+                    <img src="images/profile.jpg" alt="Profile Design">
+                    <p>PROFILE</p>
                 </div>
                 <div class="product-item">
-                    <img src="images/thumbnail.jpg" alt="Thumbnail Design"> <p>THUMBNAIL</p>
+                    <img src="images/thumbnail.jpg" alt="Thumbnail Design">
+                    <p>THUMBNAIL</p>
                 </div>
+            </div>
+            <div class="product-cta">
+                <a href="https://wa.me/6282150746678?text=Halo%20YG%20Design%2C%20saya%20tertarik%20dengan%20produk%20Anda." class="cta-button" target="_blank">PESAN SEKARANG</a>
             </div>
         </div>
     </section>
@@ -74,15 +88,38 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="images/yg_design_large.png" alt="YG Design Logo"> </div>
+                    <img src="images/yg_design_large.png" alt="YG Design Logo">
+                </div>
                 <div class="contact-info">
                     <h3>Hubungi Kami :</h3>
-                    <p>No Hp : 089539413809</p>
-                    <p>Email : ygdesign@gmail.com</p>
-                    <p>Alamat : Jln. Bersama Mu no, 46 Yogyakarta</p>
+                    <p><i class="fas fa-phone"></i> No Hp : 082150746678</p>
+                    <p><i class="fas fa-envelope"></i> Email : ygdesign@gmail.com</p>
+                    <p><i class="fab fa-instagram"></i> Instagram : @yg_design.website</p>
                 </div>
             </div>
+            <p class="copyright-text">©2025 YG Design | All rights reserved.</p>
         </div>
     </footer>
+
+    <script>
+        // JavaScript untuk Toggle Menu
+        document.addEventListener('DOMContentLoaded', function() {
+            const mobileMenu = document.getElementById('mobile-menu');
+            const mainNav = document.getElementById('main-nav');
+
+            mobileMenu.addEventListener('click', function() {
+                mainNav.classList.toggle('active');
+                mobileMenu.classList.toggle('active'); // Toggle class 'active' pada hamburger juga
+            });
+
+            // Menutup menu saat link diklik (opsional, untuk UX yang lebih baik)
+            document.querySelectorAll('#main-nav ul li a').forEach(item => {
+                item.addEventListener('click', () => {
+                    mainNav.classList.remove('active');
+                    mobileMenu.classList.remove('active'); // Hapus class 'active' dari hamburger
+                });
+            });
+        });
+    </script>
 </body>
 </html>
