--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="contact-info">
                     <h3>Hubungi Kami :</h3>
                     <p><i class="fas fa-phone"></i> No Hp : 082150746678</p>
-                    <p><i class="fas fa-envelope"></i> Email : ygdesign@gmail.com</p>
+                    <p><i class="fas fa-envelope"></i> Email : ygdesign69@gmail.com</p>
                     <p><i class="fab fa-instagram"></i> Instagram : @yg_design.website</p>
                 </div>
             </div>
