--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YG DESIGN - Layanan Desain Channel YouTube Profesional</title>
+    <title>YG-DESIGN | Jasa Desain Grafis Profesional untuk Channel YouTube Anda</title>
+    <meta name="description" content="YG-DESIGN menyediakan jasa desain channel YouTube profesional: banner, profil, thumbnail, dan kikik yang menarik dan berkualitas tinggi untuk meningkatkan engagement dan tampilan channel Anda.">
+    
     <link rel="stylesheet" href="style.css">
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-17RNN846F0"></script>
@@ -20,7 +22,7 @@
     <header class="navbar">
         <div class="container">
             <div class="logo">
-                <img src="images/yg_design_large.png" alt="YG Design Logo">
+                <img src="images/yg_design_large.png" alt="Logo YG Design">
             </div>
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
@@ -40,10 +42,10 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>SELAMAT DATANG</h1>
-            <img src="images/yg_design_large.png" alt="YG Design Large Logo" class="hero-logo-large">
-            <p class="tagline">Layanan Desain Channel YouTube Profesional</p>
-            <p>Kami siap bantu kamu membangun tampilan channel yang menarik, berkualitas, dan profesional. Tersedia berbagai pilihan produk seperti bikin kikik, banner, yang mencuri perhatian, hingga profil yang menarik perhatian, serta thumbnail yang akan selalu selaras dengan seleramu kekinian dan presisi.</p>
+            <h1>Layanan Desain Channel YouTube Profesional oleh YG-DESIGN</h1>
+            <img src="images/yg_design_large.png" alt="Logo besar YG Design" class="hero-logo-large">
+            <h2>Membangun Tampilan Channel YouTube yang Menarik, Berkualitas, dan Profesional</h2>
+            <p>Kami siap bantu kamu membangun tampilan channel yang menarik, berkualitas, dan profesional. Tersedia berbagai pilihan produk seperti bikin kikik, banner yang mencuri perhatian, hingga profil yang menarik perhatian, serta thumbnail yang akan selalu selaras dengan seleramu kekinian dan presisi.</p>
         </div>
     </section>
 
@@ -55,7 +57,7 @@
                     <p>Kami adalah tim kreatif yang fokus membantu para content creator menghasilkan visual yang luar biasa. Dengan pengalaman mendalam dalam desain visual dan pemahaman tren desain, kami menciptakan profile ekstraksi yang bukan hanya menarik, tetapi juga fungsional. Fungsional — menarik perhatian dan meningkatkan engagement.</p>
                 </div>
                 <div class="info-image">
-                    <img src="images/youtube_illustration.png" alt="Illustrasi Bikin Channel YouTube">
+                    <img src="images/youtube_illustration.png" alt="Ilustrasi Desain Channel YouTube">
                 </div>
             </div>
         </div>
@@ -63,18 +65,18 @@
 
     <section id="product" class="product-section">
         <div class="container">
-            <h2>PRODUCT</h2>
+            <h2>Produk Desain Channel YouTube Unggulan Kami</h2>
             <div class="product-grid">
                 <div class="product-item">
-                    <img src="images/banner.jpg" alt="Banner Design">
+                    <img src="images/banner.jpg" alt="Contoh Desain Banner YouTube">
                     <p>BANNER</p>
                 </div>
                 <div class="product-item">
-                    <img src="images/profile.jpg" alt="Profile Design">
+                    <img src="images/profile.jpg" alt="Contoh Desain Profil YouTube">
                     <p>PROFILE</p>
                 </div>
                 <div class="product-item">
-                    <img src="images/thumbnail.jpg" alt="Thumbnail Design">
+                    <img src="images/thumbnail.jpg" alt="Contoh Desain Thumbnail YouTube">
                     <p>THUMBNAIL</p>
                 </div>
             </div>
@@ -88,7 +90,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="images/yg_design_large.png" alt="YG Design Logo">
+                    <img src="images/yg_design_large.png" alt="Logo YG Design Footer">
                 </div>
                 <div class="contact-info">
                     <h3>Hubungi Kami :</h3>
